# Healthora

./: .env.example  .gitignore  HIS (1).xlsx  README.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  ai_report.py  alembic.ini  audit.py  audit_router.py  auth.py  dashboard.py  database.py  deps.py  inventory.py  main.py  models.py  notifications.py  prescriptions.py  purchase_orders.py  pyproject.toml  reorder_recommendation.py  schemas.py  security.py  seed.py  suppliers.py  users.py
backend/ai_nl2sql/: __init__.py  db_introspection.py  graph_builder.py  intent_router.py  path_scorer.py  pipeline.py  rag.py  schema_linker.py  sql_executor.py  sql_generator.py
backend/alembic/: env.py
backend/alembic/versions/: 20260223_0001_rbac_schema.py  20260223_0002_role_cleanup.py  20260223_0003_crud_fields.py  20260310_0004_full_scale_modules.py  20260310_0005_auth_profile_hardening.py  20260325_0006_hospital_v2_schema.py  20260326_0007_roles_and_doctor_user.py
backend/scripts/: migrate_passwords.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: sample_drug_batch_upload.csv
frontend/src/: AIReportModule.jsx  App.jsx  AuditModule.jsx  Dashboard.jsx  DispensingModule.jsx  Inventory.jsx  InventoryModule.jsx  Landing.jsx  Login.jsx  Modal.jsx  PatientsModule.jsx  PrescriptionsModule.jsx  PurchaseOrdersModule.jsx  Reorder.jsx  ReorderRecommendationModule.jsx  Reports.jsx  SuppliersModule.jsx  Users.jsx  UsersModule.jsx  api.js  styles.css
help/: README.md  how-ai-report-works.md  how-backend-works.md  how-frontend-works.md  how-login-flow-works.md  how-reorder-algorithm-works.md
help/backend/: Dockerfile.md  alembic.md  auth.py.md  dashboard.py.md  database.py.md  deps.py.md  inventory.py.md  main.py.md  models.py.md  pyproject.toml.md  schemas.py.md  security.py.md  seed.py.md  users.py.md
help/frontend/: Dockerfile.md  index.html.md  package.json.md
help/root/: .env.example.md  .gitignore.md  README.md.md  docker-compose.yml.md
nl_to_sql1/: .gitignore
nl_to_sql1/backend/: api.py  db_introspection.py  graph_builder.py  path_scorer.py  pipeline.py  rag.py  schema_linker.py  sql_executor.py  sql_generator.py
nl_to_sql1/frontend/: package-lock.json  package.json
scripts/: db_export.sh  db_import.sh
(+23 files in other folders)
